src/yini_test/cases/golden/lenient/valid/sections/section-marker-separator-underscore.yini
@yini

^ Root
name = "section-marker-separator-underscore"

^_^ Child
enabled = true
