src/yini_test/cases/golden/lenient/invalid/sections/section-level-jump.yini
@yini

^ Root
name = "root"

^^^ GrandChild
value = true
